--- a/webactual/Aceitesdecortedirectosminerales.html
+++ b/webactual/Aceitesdecortedirectosminerales.html
@@ -54,42 +54,49 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>ACEITES DE CORTE DIRECTOS MINERALES</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Aceites de tipo directo utilizados en maquinado de metales ferrosos y no ferrosos con excelentes cualidades para operaciones de alta presión. Estos aceites han sido diseñados para las múltiples operaciones de corte en metales que requiere nuestra industria nacional, desde las simples formaciones de cuerdas mediante tarrajas manuales, hasta fuertes cortes efectuados con grandes brochadoras y en taladros profundos.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+    Los tipo azufre no activo se utilizan en operaciones que requieren de un cuidado extremo en las características no manchantes, pero que requieren de cualidades de extrema presión y gran fineza en los acabados de los materiales tales como; cobre, aluminio, latón etc.<br>
+    <br>
+      <strong>KUTTING SA</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      ACEITE DE CORTE DIRECTO PARA MAQUINADO DE MATERIALES FERROSOS DEL TIPO MANCHANTE.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>OLLIN CAS 50 - R</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      ACEITE DE CORTE DIRECTO PARA ROSCADO INTERNO Y EXTERNO, CON AZUFRE ACTIVO.<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      <strong>KUTTING SA PLUS</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      CON AZUFRE ACTIVO DE COLOR Y OLOR LIGERO<br>
+      <br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>NISHUDI OIL 10, 30</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      BASE VEGETAL, REFINADO, ECOLÓGICO ATOXICO PARA CORTE CASI EN SECO<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>KUTTING NM</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      ACEITE DE CORTE DIRECTO NO MANCHANTE.PARA METALES NO FERROSOS<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>COVACOR</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      ACEITE DE CORTE DIRECTO PARA OPERACIONES DE MAQUINADO DE METALES FERROSOS, CON ALTO CONTENIDO DE AZUFRE ACTIVO.<br>
+      <br>
+      <strong>KUTTING TP</strong><br>
+      <br>
+      DEL TIPO TRIPLE PROPOSITOS, CORTE, GUIAS Y CORREDERAS, PARA EL SISTEMA HIDRAULICO.<br>
+      <br>
       </p>
 
       </div>
