--- a/webactual/Fluidos.html
+++ b/webactual/Fluidos.html
@@ -38,8 +38,7 @@
 <li role="presentation"><a href="index.html" class="active">HOME</a></li>
 <li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
 <li role="presentation"><a href="productos.html">PRODUCTOS</a></li>
-<li role="presentation"><a href="contacto.html">CONTACTO</a></li>
-<li role="presentation"><a href="ubicacion.html">UBICACION</a></li>
+<li role="presentation"><a href="contacto y ubicacion.html">CONTACTO Y UBICACION</a></li>
             </ul>
           </div>
         </div>
@@ -55,48 +54,29 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>FLUIDOS LUBRICANTES</strong></h2>
+<h2 align="left"><strong>FLUIDOS</strong></h2>
 <hr class="bottom-line">
 </div>
-      <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
-      <p align="justify">
-    <a href="fluidos lubricantes para cadena.html">FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS </a>
-    <br>
-      <br><a href="fluidos para maquinaria.html">FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y FARMACÉ</a>
-       <br>
-      <br>
-      <a href="fluidos hidraulicos.html">FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</a>
-      <br>
-
-    <br>
-    <a href="fluidos hidraulica sintetico.html">FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES </a>
-      <br>
-  <br>
-  <a href="fluidos termicos.html">FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</a>
-      <br>
-      <br>
-<a href="fluidos lubricantes para compresore de aire.html">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-        </p>
-      </div>
-
-      <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
+      <div class="col-sm-8 col-sm-6 col-xs-4 text-left" >
       <p align="justify" face="arial">
-
-<a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
-
-    <br>
-    <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</a>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-
+<li><a href="fluidoslubricantescadenas.html" class="active"><strong>FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TEMPERATURAS</strong>
+</a></li>
+<hr class="bottom-line">
+<li><a href="fluidosparamaquinaria.html" class="active"><strong>FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FARMACÉUTICA</strong></a></li>
+<hr class="bottom-line">
+<li><a href="fluidoshidraulicos.html" class="active"><strong>FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</strong></a></li>
+<hr class="bottom-line">
+<li><a href="fluidoslubricantessinte.html" class="active"><strong>FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COJINETES</strong></a></li>
+<hr class="bottom-line">
+<li><a href="fluidostermicos.html" class="active"><strong>FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</strong></a></li>
+<hr class="bottom-line">
+<li><a href="fluidoslubricantescompresores.html" class="active"><strong>FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</strong></a></li>
+<hr class="bottom-line">
+<li><a href="fluidosparabombas.html" class="active"><strong>FLUIDOS PARA BOMBAS DE VACÍO</strong></a></li>
+<hr class="bottom-line">
+<li><a href="fluidoslubricantescompresoresrefri.html" class="active"><strong>FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</strong></a></li>
+<hr class="bottom-line">
       </p>
 
       </div>
@@ -112,7 +92,7 @@
 
 
     </div>
-
+    
 
 
 
