--- a/webactual/GrasascomplejasdeLitio.html
+++ b/webactual/GrasascomplejasdeLitio.html
@@ -54,42 +54,30 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS COMPLEJAS DE LITIO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Estas grasas poco comunes son el resultado de la relación de un mol de 12-hidroxi estearato de litio con 0.5 moles de azelató de dilitio bajo un riguroso control de proceso incluyendo dos fases de calentamiento.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      Estas grasas tienen un punto de goteo mucho más elevado que las grasas normales de litio, mejor estabilidad mecánica, mejores propiedades de resistencia al lavado por agua  y más larga duración de vida a elevada temperatura en el  rodamiento.<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
-      <br>
-      <strong>PASTA DE COBRE-201</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      Se aplica con buenos resultados en rodamientos automotrices e industriales, bajo una amplia gama de ambientes y temperaturas (sobre todo las elaboradas con básicos sintéticos)<br>
+
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>GRASA LUBRICOMP</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      GRASA DE JABÓN COMPLEJO DE LITIO DE CALIDAD PREMIUM PARA APLICACIONES AUTOMOTRICES E INDUSTRIALES.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>COMPLESIN L2/S, L00/2, L4/S</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
-      <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA DE BASE SINTÉTICA CON JABÓN COMPLEJO DE LITIO.<br>
       </p>
 
       </div>
