--- a/webactual/GrasasconEspesante.html
+++ b/webactual/GrasasconEspesante.html
@@ -39,7 +39,6 @@
 <li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
 <li role="presentation"><a href="productos.html">PRODUCTOS</a></li>
 <li role="presentation"><a href="contacto y ubicacion.html">CONTACTO Y UBICACION</a></li>
-            </ul>
           </div>
         </div>
       </div>
@@ -54,42 +53,49 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS CON ESPESANTE INORGÁNICO (BENTONA, SILICA)</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Este Tipo De  Grasas Soportan  El Trabajo A Altas Temperaturas Sin Escurrir De Los Cojinetes Y No Tienen Punto De Goteo, No Se Funden Bajo El Calor Extremo. Son Resistentes Al Agua Y Técnicamente No Son Grasas Sino Geles.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>HIGHTEC TEMP. GREASE 1, 2, 3</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      GRASA DE ALTA TEMPERATURA PARAAPLICACIONES INDUSTRIALES (BASE MINERAL).<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>HIGHTEC TEMP. GREASE No. 2 3 (BM)</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      GRASA DE ALTA TEMPERATURA  PARA APLICACIONES INDUSTRIALES CON LUBRICANTES SÓLIDOS DE EMERGENCIA (BISULFURO DE MOLIBDENO).<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      <strong>GRAFIGEL No.2</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      GRASA INDUSTRIAL PARA SISTEMAS DE ALTA TEMPERATURA CON LUBRICANTES SÓLIDOS DE EMERGENCIA (GRAFITO)<br>
+      <br>
+      <strong>SPANTEX No.2</strong><br>
+      <br>
+      GRASA SINTÉTICA DISEÑADA PARA TRABAJAR EN AMPLIO RANGO DE TEMPERATURAS, CARGAS Y VELOCIDADES<br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>STARK G SHF</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      GRASA INFUSIBLE, CON ACEITE SINTÉTICO PARA LUBRICACIÓN DE MECANISMOS SOMETIDOS A ALTAS TEMPERATURAS (HASTA 200ºC)<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>STARK POE No.2</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      GRASA SINTÉTICA PARA TEMPERATURAS EXTREMADAMENTE ALTAS (HASTA 260ºC)<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>TRIBOLUBE RA - 4109 (S)</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA  SINTÉTICA PARA RODAMIENTOS QUE OPERAN A EXTREMADAMENTE ALTA TEMPERATURA QUE NO CARBONIZA  (A BASE DE NEGRO DE HUMO).<br>
+      <br>
+      <strong>GRASA PARA ENGRANES ANTIHERRUMBRE ADHESIVA Y EP.</strong><br>
+      <br>
+      GRASA INFUSIBLE CON ADHERENCIA Y LUBRICANTES SÓLIDOS PARA LA LUBRICACIÓN DE ENGRANES Y CABLES (GRAN RESISTENCIA DE PELÍCULA)<br>
       </p>
 
       </div>
