--- a/webactual/GrasasdeCalcio.html
+++ b/webactual/GrasasdeCalcio.html
@@ -54,42 +54,30 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS DE CALCIO, COMPLEJAS DE CALCIO Y SULFONATO DE CALCIO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Las grasas de calcio se conocen desde hace mucho tiempo, y aun son muy utilizadas debido a que son; resistentes al agua, económicas, textura suave, buena estabilidad mecánica. A través del tiempo su mayor defecto bajo punto de gota a sido superado. Sus características de extrema presión natural y resistencia al agua las siguen conservando.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>LUBRAKAL No.1, 2, 3</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      GRASA  DE CALCIO ANHIDRO (12-HIDROXI ESTEARATO DE CALCIO), DE GRAN RESISTENCIA A FUERTE CONTAMINACIÓN POR AGUA Y VAPOR (TEMPERATURA DE APLICACIÓN HASTA 100ºC)<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>KALPLEX No.2</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      GRASA COMPLEJA DE CALCIO CON EXTRAORDINARIA ADHERENCIA Y RESISTENCIA AL AGUA, A ELEVADAS TEMPERATURAS Y PROPIEDADES EXTREMA PRESIÓN (TEMPERATURA DE APLICACIÓN HASTA 150ºC).<br>
+      
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>REOTHIX GREASE</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
-      <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
-      <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
-      <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA DE ESTRUCTURA TIXOTROPICA CON ESPESANTE COMPLEJO SINTÉTICO PARA APLICACIONES INDUSTRIALES EN DONDE LA CONTAMINACIÓN POR AGUA FRÍA O CALIENTE EN COMBINACIÓN CON CARGAS EXTREMAS ES COMÚN. (TEMPERATURA DE APLICACION HASTA 170°C).<br>
       </p>
 
       </div>
