--- a/webactual/GrasasdegradoAlim.html
+++ b/webactual/GrasasdegradoAlim.html
@@ -54,42 +54,47 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS DE GRADO ALIMENTICIO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Estas grasas son usadas para lubricar maquinaria en una amplia variedad de plantas que procesan alimentos tales como: panaderías, fábricas de cerveza, industria lechera, empacadoras de frutas y vegetales, fabricantes de latas para envasar bebidas. Dichas grasas son elaboradas con básicos minerales y sintéticos que cumplen con normas USP. Sus aditivos también cumplen normas FDA  178.3620 (a), (b), la combinación de ambos produce una grasa NSF-H1  y pueden ser de los siguientes espesantes:<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      1.- 12-HIDROXI ESTEARATO DE CALCIO<br>
+      2.- COMPLEJO DE ALUMINIO<br>
+      3.- ÓRGANO-CLAY<br>
+      4.- POLIUREA<br>
+      5.- COMPLEJAS DE SULFONATO DE CALCIO<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      <strong>WHITEKAL No.2</strong><br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      GRASA GRADO ALIMENTICIO ( FOOD GRAEASE) PARA APLICARSE  EN AMBIENTES DONDE LA HUMEDAD Y PRESENCIA DE AGUA ES ELEVADA.<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      <strong>ALCO FDA</strong><br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      GRASA PARA LUBRICACIÓN DE MAQUINARIA ALIMENTICIA QUE OPERA EN ALTAS TEMPERATURAS DE NOVEDOSA TECNOLOGÍA, PUES TIENE TODAS LAS PROPIEDADES DE LAS GRASAS COMPLEJAS DE ALUMINIO INDUSTRIALES, PERO CUMPLIENDO NORMAS ( NSF H-1).<br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>AEROSIN - NF</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      GRASA PARA LA LUBRICACIÓN DE MAQUINARIA ALIMENTICIA QUE OPERA EN ALTAS TEMPERATURAS<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>CROMPLEX M - No.2</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      GRASA PARA LUBRICAR MAQUINARIA QUE PROCESA ALIMENTOS A BASE DE HIDROCARBUROS MINERALES, CUMPLE CON LA NORMA NSF  H-1.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>CROMPLEX S</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA SINTÉTICA DE ALTO RENDIMIENTO CUMPLE CON LA NORMA NSF  H-1. PUEDE SER USADA EN EQUIPO QUE PROCESA ALIMENTOS COMO UNA PELÍCULA PROTECTORA ANTICORROSIVA, COMO UN AGENTE DESMOLDANTE EN SELLOS O EMPAQUES Y COMO LUBRICANTE PARA PARTES DE MAQUINAS Y EQUIPOS QUE PROCESAN ALIMENTOS, TALES COMO: RODAMIENTOS, COJINETES, GUÍAS, RODILLOS Y SEGUIDORES DE LEVAS.<br>
+      <br>
+      <strong>HOTEMP FDA</strong><br>
+      <br>
+      GRASA SINTÉTICA DE ALTO RENDIMIENTO PARA ALTAS TEMPERATURAS.<br>
       </p>
 
       </div>
