--- a/webactual/LubricantesenAerosol.html
+++ b/webactual/LubricantesenAerosol.html
@@ -54,42 +54,53 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>LUBRICANTES EN AEROSOL</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Hay dispositivos mecánicos los cuales deben ser lubricados con una cantidad exacta de lubricante activo la cual es muy pequeña, por lo tanto difícil de aplicar en el punto exacto. Otros dispositivos requieren lubricación de tipo seca porque el ambiente  es polvoso y el uso de lubricantes convencionales atrapa este polvo y se convierten en masillas que no lubrican atorando los dispositivos hasta que colapsan.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      El uso de lubricantes aplicados en aerosol además de ser practico, evita despilfarros y resuelve estos problemas.<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+
+      <strong>MOLY  FILM  DRIER</strong><br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      LUBRICANTE DE PELÍCULA SECA CON BISULFURO DE MOLIBDENO, QUE SECA AL AIRE DE 3 A 6 MINUTOS FORMANDO UNA PELÍCULA TIPO BARNIZ RESISTENTE.<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      <strong>TEFLÓN  FILM  DRIER  (TFD)</strong><br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      LUBRICANTE DE PELÍCULA SECA  SEMI-TRANSPARENTE  CON TEFLÓN, TIPO BARNIZ DE DESLIZAMIENTO DE APARIENCIA LIMPIA.<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      <strong>TEFLÓN  LUBE  FILM  DRY</strong><br>
+      <br>
+      LUBRICANTE SECO DE PTFE NO ACEITOSO, NO MANCHANTE, Y DE PELÍCULA IMPERCEPTIBLE, PROTECTOR ANTIHERRUMBRE Y DESMOLDANTE.<br>
+      <br>
+      <strong>GRAPHITE  FILM  DRIER</strong><br>
+      <br>
+      LUBRICANTE Y DESMOLDANTE EN PELÍCULA SECA GRAFITADO PARA ALTA TEMPERATURA, EN LA FABRICACIÓN DE BOTELLA DE VIDRIO  (LUBRICACIÓN DE BOMBILLOS).
       </p>
       </div>
+      
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>PURÉLUBE  FG</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      LUBRICANTE EN ESPUMA MULTIUSOS  GRADO ALIMENTICIO, DESENGRASA, PENETRA, LIBERA, LUBRICA Y PROTEGE.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>ANTI-ROULLIE  CONVERTOR</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      NEUTRALIZA  QUÍMICAMENTE   OXIDO Y HERRUMBRE, CONVIRTIÉNDOLO EN UNA PELÍCULA NEGRA PROTECTORA QUE SELLA Y PROLONGA LA VIDA DE LOS METALES FERROSOS.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>FREEZE  CLEAN</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      CAUSA UN ENFRIAMIENTO RÁPIDO DE LA GOMA DE MASCAR PEGADA EN LAS SUPERFICIES, CONVIRTIÉNDOLA EN UN SÓLIDO QUEBRADIZO PERMITIENDO RETIRARLA FÁCILMENTE CON ESPÁTULA.
+      <br>
+      <strong>PENTRA  FLUID  EP</strong><br>
+      <br>
+      PENETRA EFECTIVAMENTE LA CORROSIÓN MAS DURA AFLOJÁNDOLA, CONTIENE LUBRICANTES ACEITOSOS Y EXTREMA PRESIÓN.
       </p>
 
       </div>
