--- a/webactual/Especialidades.html
+++ b/webactual/Especialidades.html
@@ -54,43 +54,49 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>ESPECIALIDADES</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      No existe en el mundo maquina alguna por sencilla que sea que no requiera lubricación, ya que con esta mejora tanto el funcionamiento, como la vida útil de los equipos y maquinarias.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      Esto puede darnos una idea de lo complejo y extenso que es el mundo de la lubricación. Por ello tenemos una sección aparte denominada especialidades industriales en lubricación.<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      <strong>RUST PREVENTIVE 24285</strong><br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      PREVENTIVO DE HERRUMBRE ELABORADO CON LAS MEJORES BASES PARA PROTECCIÓN DE PIEZAS DE MATERIAL FERROSO, EN ALMACENAMIENTO, BAJO TECHO Y A LA INTEMPERIE. ES EXCELENTE LUBRICANTE PARA ARMAS Y ADECUADO PARA MAQUINARIA DE PRECISIÓN<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      <strong>OLLIN BIO SR</strong><br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      DESENGRASANTE LIMPIADOR BIODEGRADABLE A BASE DE SOLVENTES SINTÉTICOS DE ALTA PUREZA ATOXICO, GRADO ALIMENTICIO. NO ATACA LOS PLÁSTICOS<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      <strong>RELISHCLEAN</strong><br>
+      <br>
+      CREMA DESENGRASANTE DE TIPO QUE NO REQUIERE AGUA, NO RESECA LA PIEL, SOLO SE REQUIERE UNA FRANELA LIMPIA O PAPEL PARA QUITARSE LA CREMA Y SUCIEDAD<br>
+      <br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>YECAST 10</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      DESMOLDANTE ACUOSO A BASE DE CERAS SINTÉTICAS EMULSIONADAS PARA LA INYECCIÓN DE METAL COMO: ZAMAC, ALUMINIO, ETC.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>NEUMÁTIC OILS</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      EN VISCOSIDADES ISO 22 E ISO 32, PARA LUBRICAR LOS IMPULSORES Y SALIDAS DE AIRE EN SISTEMAS NEUMÁTICOS. SE TIENE TAMBIÉN EN GRADO ALIMENTICIO<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>PROTEO</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
-      </p>
+      CREMA PROTECTORA TIPO BARRERA, OCUPACIONAL, PARA EVITAR DERMATITIS EN LAS MANOS DE LOS OPERARIOS QUE MANEJAN SOLVENTES, QUÍMICOS, FLUIDOS DE CORTE, ETC.<br>
+      <br>
+      <strong>OLLIN SOR</strong><br>
+      <br>
+      DESENGRASANTE BASE SOLVENTE (DIELÉCTRICO NO INFLAMABLE, DE USO SEGURO) PUEDE USARSE CON EL EQUIPO ENERGIZADO.<br>
+      <br>
 
       </div>
       </div>
