--- a/webactual/Formadoembutido.html
+++ b/webactual/Formadoembutido.html
@@ -54,43 +54,55 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FORMADO, EMBUTIDO Y TROQUELADO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Una línea completa de fluidos directos lavables, emulsiones, solventes evaporativos, en forma de grasa, de alta y baja viscosidad para llevar acabo operaciones de troquelado ligeras, medianas, severas tanto de materiales ferrosos como no ferrosos. Fluidos que no requieren desengrase, lavables todos ellos están incluidos en la siguiente tabla de productos.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>DRAW OIL</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      DIFERENTES VISCOSIDADES PARA CORTE DE ALUMINIO, NO MANCHANTE AUN DESPUÉS DEL RECOCIDO. FORMADO Y EMBUTIDO DE ALUMINIO, BRONCE, ETC.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>TROKESIL</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      COMPUESTO EN FORMA DE GRASA PARA TROQUELADO Y EMBUTIDO DE LAMINAS DE ACERO CALIBRES GRUESOS<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      <strong>VANISH - 22</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      FLUIDO LIGERO, EVAPORABLE, ECOLÓGICO NO TOXICO PARA TROQUELADO Y EMBUTIDO, DE LAMINAS DELGADAS DONDE SE REQUIERE UN FLUIDO QUE NO SEA OFENSIVO PARA LOS OPERARIOS<br>
+      <br>
+      <strong>ONKEIL BEST</strong><br>
+      <br>
+      PARA TROQUELADO Y EMBUTIDO MEDIANO A SEVERO, LAVABLE
+      <br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>TROKEDENT - 22</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      FLUIDO LIGERO DE ALTA VELOCIDAD EVAPORACIÓN PARA EL TROQUELADO DE LA LAMINA DE ACERO CALIBRES MUY DELGADOS COMO BOTES PARA ENVASAR AEROSOL, NO REQUIERE DESENGRASE.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>FORMILUB - 25</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      PARA ESTIRADO DE TUBO EN FRÍO, VARILLAS, BARRAS METALES FERROSOS Y NO FERROSOS, INCLUYENDO ACERO INOXIDABLE PARA OPERACIONES MUY SEVERAS.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>ASTREA 40, 40 FET (8%), 40 FET (6%)</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
-      </p>
+      FLUIDOS PARA TROQUELADO Y FORMADO TIPO EMULSIÓN LECHOSA LISTOS PARA USAR, ECONÓMICOS Y NO REQUIEREN DESENGRASE (CONTRATIPO DEL MONTGOMERY). DIFERENTES CONCENTRACIONES PARA TRABAJOS EN LAMINAS DE DIFERENTE CALIBRE.<br>
+      <br>
+      <strong>AQUADRAW 325 E</strong><br>
+      <br>
+      EMULSION LUBRICANTE PARA OPERACIONES DE FORJA, ESTAMPADO EN CALIENTE Y EN FRÍO DE LATÓN, ALUMINIO Y ACERO (LIBRE DE SÓLIDOS) (CONTRATIPO DE WOLFRACO WF - 52).<br>
+      <br>
+      <strong>SINDRAW OIL 63 T</strong><br>
+      <br>
+      FLUIDO SINTÉTICO BASE AGUA PARA TROQUELADO Y EMBUTIDO PROFUNDO, FÁCILMENTE LAVABLE, BIODEGRADABLE<br>
+      <br>
 
       </div>
       </div>
