--- a/webactual/GrasasLubricantes.html
+++ b/webactual/GrasasLubricantes.html
@@ -54,43 +54,47 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS LUBRICANTES</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Son lubricantes viscoso--plásticos obtenidos  al espesar un aceite mineral o sintético con un jabón normalmente metálico.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      Según la ASTM es un producto sólido o semi-sólido obtenido por dispersión de un agente espesante, normalmente jabón, en aceites minerales o sintéticos.<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      Parte de la producción total de energía del mundo es consumida en la fricción. La fricción genera calor y el equipo que funciona con calor tiene mas desgaste. Un lubricante debe  reducir el  coeficiente de fricción y de este modo reduce la cantidad de calor que genera. Las grasas poseen coeficientes de fricción mas bajos que los aceites que se utilizan en su fabricación, especialmente en condiciones de lubricación limite. Por tanto se consume menos energía con grasas que con aceites.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      Las grasas  son el otro gran grupo de lubricantes en forma sólida o semi-sólida que complementan la lubricación.
       </p>
       </div>
 
-      <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
+      <div class="col-sm-8 col-sm-6 col-xs-4 text-left" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
-      <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
-      <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
-      <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
-      <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
-      </p>
+<li><a href="GrasasdeCalcio.html" class="active"><strong>Grasas de calcio, complejas de calcio y complejas de sulfonato de calcio</strong>
+</a></li>
+<hr class="bottom-line">
+<li><a href="GrasasdeSodio.html" class="active"><strong>Grasas de Sodio</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasasdeLitio.html" class="active"><strong>Grasas de Litio</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasasconEspesante.html" class="active"><strong>Grasas con espesante inorgánico (Bentona, silica)</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasascomplejasdeLitio.html" class="active"><strong>Grasas complejas de Litio</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasascomplejasdeAlum.html" class="active"><strong>Grasas complejas de Aluminio Mineral</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasasdePoliurea.html" class="active"><strong>Grasas de Poliurea</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasascomplejasdeBario.html" class="active"><strong>Grasas complejas de Bario</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasasFluoradas.html" class="active"><strong>Grasas Fluoradas</strong></a></li>
+<hr class="bottom-line">
+<li><a href="GrasasdegradoAlim.html" class="active"><strong>Grasas de Grado Alimenticio</strong></a></li>
+<hr class="bottom-line">
+</p>
+</p>
 
       </div>
       </div>
@@ -106,39 +110,6 @@
 
     </div>
     
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <footer>
     <div class="container">
