--- a/webactual/GrasascomplejasdeAlum.html
+++ b/webactual/GrasascomplejasdeAlum.html
@@ -54,42 +54,38 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS COMPLEJAS DE ALUMINIO MINERAL</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Estas han llegado a ser muy populares desde que se dispusieron comercialmente. El mejor jabón complejo de aluminio es el hidroxi benzoato estearato de aluminio. Si el jabón es preparado cuidadosamente se forma un jabón complejo estable. Estas grasas tienen elevados puntos de goteo (275ºc) y excelente resistencia al agua, su estructura fibrosa es la más pequeña que el resto de las grasas, y esta propiedad posee varias ventajas:<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      1.- Para su fabricacion requieren menos espesante.<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      2.- Para su fabricacion requieren menos espesante.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      3.- Retención en igual medida lo mismo de aceites de alto o bajo I.V. incluso sintéticos.<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      Actualmente su mayor aplicación es en la elaboración de grasas grado alimenticio, y en todo tipo de aplicaciones especialmente aquellas expuestas a altas cargas de impacto, presiones extremas, altas cantidades de agua y otras condiciones adversas.
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>KOLATEC EP</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      GRASA COMPLEJA DE ALUMINIO DE USO MULTIPLE PARA APLICACIONES INDUSTRIALES, BOMBEABLE.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>GRAFOSOL MX- 1</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      GRASA CON UNA DISPERSION DE GRAFITO ULTRA FINO EN UNA MEZCLA DE SOLVENTES EN AEROSOL.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>ALCOXINTH GREASE FG</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA MULTIPROPOSITOS SINTETICA DE ALTO RENDIMIENTO A BASE DE ALUMINIO COMPLEJO, Y PTFE.<br>
+      
       </p>
 
       </div>
