--- a/webactual/GrasascomplejasdeBario.html
+++ b/webactual/GrasascomplejasdeBario.html
@@ -54,42 +54,37 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS COMPLEJAS DE BARIO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Las grasas espesadas con jabón complejo de bario son de fibra larga, que se adhiere fuertemente a los metales, operan sobre un amplio rango de temperaturas, tienen destacadas propiedades adhesivas y cohesivas las cuales tienen la capacidad de repeler el agua y vapor de agua. Se aproximan mas al concepto grasa multipropósitos, pues resisten el lavado por agua. (pueden trabajar sumergidas en agua), soportan altas temperaturas, absorben con facilidad las altas presiones y cargas manteniendo su estabilidad mecánica. Son ideales para servicios pesados como equipo fuera de carretera: tras cabos, palas mecánicas, tractores, lubricación de equipo de minería y explotación de cantera.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>COMPLEX BAR - BR</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      GRASA DE ALTO PODER SELLANTE, DE EXCELENTE COMPORTAMIENTO FRENTE  A FUERTES CARGAS, AGENTES QUIMICOS VAPOR DE AGUA Y TEMPERATURAS ELEVADAS.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>COMPLEX BAR - S</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      GRASA DE EXCELENTE COMPORTAMIENTO EN RODAMIENTOS Y COJINETES LISOS SOMETIDOS A VELOCIDADES MEDIAS Y ALTAS.<br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>COMPLEX  MR, MR1</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      GRASA DE LARGA DURACION PARA COJINETES LISOS Y RODAMIENTOS CON ESPECIAL PROTECCION ANTICORROSIVA.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>COMPLEX NAB - 50</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      GRASA ADHERENTE Y FIBROSA PARA MECANISMOS SOMETIDOS A TEMPERATURAS ELEVADAS DE LARGA DURACION.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>COMPLEX BAR - 100</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA PARA EXTREMA PRESION DE EXCELENTE COMPORTAMIENTO FRENTE A CARGAS ESPECIFICAS ELEVADAS Y PROTECCION ANTICORROSIVA.<br>
       </p>
 
       </div>
