--- a/webactual/GrasasdeLitio.html
+++ b/webactual/GrasasdeLitio.html
@@ -54,42 +54,45 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS DE LITIO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Estas han logrado una gran aceptación, debido a que reúnen las mejores características que poseen cada una de las anteriores. O sea que las grasas de litio poseen; elevados puntos de goteo (190ºc)  y son resistentes al agua. Desde que se introdujo esta grasa, las de calcio y sodio han descendido en su popularidad y utilización, mientras que las de litio han aumentado rápidamente su uso y aplicación. Aproximadamente el 54% de las grasas que se producen en el mundo son de jabón de litio. <br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>MULTIPROPÓSITOS</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      LA GRASA LUBRICANTE  “MULTIPROPÓSITOS”, ESTA FORMULADA A BASE DE JABÓN DE LITIO,  ACEITES BÁSICOS DE ALTA CALIDAD Y UN PAQUETE DE ADITIVOS QUE LE CONFIEREN CARACTERISTICAS  ANTIHERRUMBRANTES E INHIBIDORES DE LA OXIDACIÓN, PROTEGIENDO LAS PARTES LUBRICADAS DE LA CORROSIÓN.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>MULTIPROPÓSITOS E.P.</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      GRASA DE JABÓN DE LITIO PARA EXTREMA PRESIÓN.<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      <strong>MOLLY  GREASE  E.P. 2</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      GRASA AUTOMOTRIZ / INDUSTRIAL DE USO MULTIPLE CON LUBRICANTES SÓLIDOS DE EMERGENCIA (BISULFURO DE MOLIBDENO).<br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>LITOX MARFIL No. 1, 2, 3</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      GRASAS DE JABÓN DE LITIO COLOR BLANCO TRANSLUCIDO QUE CONTIENEN EFECTIVOS INHIBIDORES DE CORROSIÓN Y ANTIOXIDANTES, DE ASPECTO LIMPIO.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>GRASA  ED - 90</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      GRASA LUBRICANTE PARA ENGRANAJES ABIERTOS PARA TRABAJO PESADO COLOR NEGRO.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>SILID No. 2 PARA ALTA  Y BAJA TEMPERATURA</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA DE SILICON PARA LA TÉCNICA DE LUBRICACIÓN EN RODAMIENTOS QUE OPERAN EN ALTA Y BAJA TEMPERATURA.<br>
+      <br>
+      <strong>OLLIN FREEZE (ME)</strong><br>
+      <br>
+      GRASA SINTÉTICA QUE RESISTE BAJAS TEMPERATURAS Y ALTAS VELOCIDADES (DIESTERES).<br>
       </p>
 
       </div>
