--- a/webactual/GrasasdeSodio.html
+++ b/webactual/GrasasdeSodio.html
@@ -54,42 +54,25 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>GRASAS DE SODIO</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Básicamente se desarrollaron como una mejora al bajo punto de goteo de las grasas de calcio, el punto de gota de estas grasa es casi el doble de las grasas de calcio. Son fibrosas y se adhieren a los cojinetes bajo condiciones de presión y temperatura, también poseen propiedades preventivas a la oxidación. A pesar de que estas se descomponen por la acción del agua se utilizan mucho debido a que son económicas.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>GRASA FIBROSA HD - 00, 2, 3</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
-      <br>
-      <strong>PASTA DE COBRE-201</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      LA “ GRASA FIBROSA HD – 00,,2, 3.” ESTA ELABORADA A BASE DE JABÓN DE SODIO. ACEITE MINERAL Y ADITIVOS DE ALTA CALIDAD, NO FORMAN RESINAS Y PROPORCIONA UNA GRAN SEGURIDAD EN LO QUE A TÉCNICA DE LUBRICACIÓN SE REFIERE, LA “GRASA FIBROSA HD – 00, 2, 3.” NO ES RESISTENTE AL AGUA EN FORMA DIRECTA  PERO PUEDE ABSORBER AGUA CONDENSADA Y HÚMEDAD SIN PERJUDICAR SU FUNCIÓN LUBRICANTE.  (GRAFITADA)<br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>FIBROUSNA 00 - EP</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
-      <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
-      <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
-      <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      GRASA SAPONIFICADA AL SODIO PARA TRABAJO PESADO RESISTENTE A LA SEPARACIÓN DE ACEITE CON PROTECCIÓN ANTIHERRUMBRE  CONTRA PEQUEÑAS CANTIDADES DE AGUA. DISEÑADA PARA LA LUBRICACIÓN DE DISPOSITIVOS MECÁNICOS QUE CONJUGAN ACERO-BRONCE EN SUS PARTES MECÁNICAS.<br>
       </p>
 
       </div>
