--- a/webactual/fluidoshidraulicos.html
+++ b/webactual/fluidoshidraulicos.html
@@ -54,42 +54,34 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FLUIDOS HIDRAULICOS IGNIFUGOS DIFERENTES BASES SINTETICAS</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
-      <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+    <p align="justify">
+    Las condiciones de operación de la maquinaria hidráulica se han vuelto mas severas que nunca. Altas temperaturas combinadas con velocidades y presiones elevadas crean un serio riesgo de incendio. El uso de fluidos hidráulicos resistentes al fuego es necesario en industrias tales como acereras, fundidoras de metal, minas y generación de energía. Las aplicaciones son tan diversas que una sola base sintética no satisface a todas, TRIBOQUIMIA fabrica fluidos hidráulicos ignífugos en diferentes bases sintéticas y viscosidades.<br>
+    <br>
+      <strong>HIDRAULICO GA</strong><br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
-      <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
-      <br>
-      <strong>PASTA DE COBRE-201</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      FLUIDOS  HIDRÁULICOS  RESISTENTE AL FUEGO CON CARACTERÍSTICAS ANTIDESGASTE AGUA-GLICOL.<br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>REOLUBE HYD</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      FLUIDOS  HIDRÁULICOS BASE FOSFATO ESTERES<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>METSAFE HF</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      FLUIDOS HIDRÁULICOS  RESISTENTES  AL FUEGO BASE POLIOLÉSTER<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>ECOGARD FR</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      FLUIDOS  HIDRÁULICOS  RESISTENTES AL FUEGO ECOLÓGICOS BASE POLIÉTER POLIOL<br>
+      <br>
       </p>
 
       </div>
