--- a/webactual/fluidoslubricantescadenas.html
+++ b/webactual/fluidoslubricantescadenas.html
@@ -54,42 +54,61 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Las cadenas son dispositivos de maquinas de gran importancia, que requieren lubricantes especializados para que su operación sea segura, efectiva, y económica. TRIBOQUIMIA posee una amplia experiencia en lubricantes para cadenas. El objetivo es ofrecer indicaciones de elección y uso.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      Los lubricantes así como los productos de lubricación, la limpieza de las cadenas, la cantidad de lubricante y las instalaciones o equipos de lubricación deben estar en estrecha relación con las condiciones de funcionamiento.<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      Un lubricante de calidad exige:<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      1.- Fabricantes de lubricantes experimentados, que puedan presentar datos de aplicación.<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      2.- Lubricantes de probada eficacia, elegidos en base a los datos característicos.<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      3.- Asesoramiento competente.<br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      4.- Servicio.<br>
+      <br>
+      <strong>GRAMOLLY  D8</strong><br>
+      <br>
+      DISPERSIÓN DE GRAFITO Y MOLIBDENO COLOIDAL EN UN SOLVENTE DE ALTO PUNTO DE INFLAMACIÓN, PARA APLICACIÓN POR ASPERSIÓN<br>
+      <br>
+      <br>
+      <strong>ANTARES HT - 25</strong><br>
+      <br>
+      PARA TEMPERATURAS HASTA  210°C<br>
+      <br>
+
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>OVEN - BT</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      PARA CADENAS DE HORNOS DE LITOGRAFÍA,  TEMPERATURAS  HASTA  230°C<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>GRAMOLLY D - 4</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      DISPERSIÓN DE GRAFITO COLOIDAL PURIFICADO EN SOLVENTE PARA CONDICIONES DE TEMPERATURA MAYOR DE  -40 A  260°C PARA APLICACIÓN POR MIGHTY LUBE SYSTEMATIC LUBRICATION  EQUIPMENT<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>MOLLY GRAF FLUID WTS</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      DISPERSIÓN DE GRAFITO COLOIDAL Y MOLIBDENO EN UN ACEITE SINTÉTICO QUE NO CARBONIZA APLICACIONES HASTA 400°C<br>
+      <br>
+      <strong>VULKAN  OIL  HT</strong><br>
+      <br>
+      FLUIDOS PARA CADENAS EN ULTRA ALTAS TEMPERATURAS HASTA 260°C<br>
+      <br>
+      <strong>ANTARES HT 25 GA</strong><br>
+      <br>
+      FLUIDO PARA LUBRICAR CADENAS QUE TRANSPORTAN ALIMENTOS<br>
+      <br>
       </p>
 
       </div>
