--- a/webactual/fluidoslubricantescompresores.html
+++ b/webactual/fluidoslubricantescompresores.html
@@ -54,42 +54,47 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Los compresores modernos son mas pequeños y funcionan a velocidades que todavía no hace muchos años parecían imposibles de lograr, esto hace que su lubricación sea mas critica. Los proveedores de lubricantes hemos tenido que introducir productos mas elaborados, que funcionen en condiciones ambientales cada vez mas adversas. La industria de los lubricantes no solo a creado nuevos productos para llenar esos requisitos, sino en realidad también a podido alargar los intervalos de cambio de aceite, en la mayor parte de los casos (8000 a 10000 hrs.) Diferentes bases sintéticas son necesarias para cubrir las exigencias de los fabricantes de compresores de aire.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>COMPRESOR GP OILS</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      LUBRICANTES BASE MINERAL PARA COMPRESORES DE AIRE TIPO PREMIUM.<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>EOS SHF</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      LUBRICANTES SINTETICOS PARA COMPRESORES PREMIUM BASE PAO´S<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      <strong>EOS POE</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      LUBRICANTES SINTÉTICAS PARA COMPRESORES PREMIUM DIESTER.<br>
+      <br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>EOS HDF</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      LUBRICANTES SEMI-SINTETICOS PARA COMPRESORES.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>XUPRA COOLANT</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      LUBRICANTES SINTÉTICOS PREMIUM PARA COMPRESORES POLIALKILEN GLICOL/POLIOLESTER.<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>EOS SHF GA</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      LUBRICANTES SINTÉTICOS PREMIUM PARA COMPRESORES DE AIRE GRADO ALIMENTICIO (NSF H-1)<br>
+      <br>
+      <strong>FLUSH - SOL</strong><br>
+      <br>
+      DESCARBONIZANTE, LIMPIADOR DE COMPRESORES<br>
+      <br>
       </p>
 
       </div>
