--- a/webactual/fluidoslubricantessinte.html
+++ b/webactual/fluidoslubricantessinte.html
@@ -54,42 +54,29 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Los engranajes son unos de los dispositivos mecánicos mas empleados en maquinaria de todo tipo, su característica de choque-deslizamiento entre dientes lo hacen un dispositivo a lubricar con fluidos especializados. Las distintas condiciones de operación y aplicación han conducido al desarrollo de lubricantes con diferentes bases sintéticas, para satisfacer el requerimiento de los fabricantes de equipo original. TRIBOQUIMIA, cuenta con una línea completa de estos fluidos que bajan el consumo de potencia entre un 2 y 5 % con respecto a los aceites convencionales mientras mantienen una excelente estabilidad térmica.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>SPAYLENE SERIE 300</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
-      <br>
-      <strong>PASTA DE COBRE-201</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
-      <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      LUBRICANTES SINTÉTICOS INDUSTRIALES PARA ENGRANES, RODAMIENTOS Y COJINETES A BASE DE HIDROCARBUROS SINTETICOS PAO´S
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>GLYG OLLIN SERIE 200</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      LUBRICANTES SINTÉTICOS PARA ENGRANES INDUSTRIALES A BASE DE POLIGLICOL.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>ARLAN FM (TERMOESTABLE)</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
-      <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      LUBRICANTES SEMI-SINTETICOS ANTIDESGASTE Y ANTIFRICCIÓN (EVITAN EL MICRO PITING).<br>
       </p>
 
       </div>
