--- a/webactual/fluidosparamaquinaria.html
+++ b/webactual/fluidosparamaquinaria.html
@@ -54,42 +54,42 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FLUIDOS LUBRICANTES PARA LA INDUSTRIA  ALIMENTICIA Y FARMACÉUTICA</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Características y Beneficios de los Lubricantes Grado Alimenticio registrados con NSF H- 1. La línea  de lubricantes para maquinaria alimenticia esta diseñada para proveer lubricación completa en plantas que procesan y  embotellan  (envasan) alimentos, formulados de básicos minerales  blancos USP y sintéticos de alta calidad. Todos los lubricantes H - 1 de TRIBOQUIMIA están fabricados con ingredientes que cumplen la regulación FDA 21 CFR. 178.3570 para lubricantes en contacto incidental con alimentos. Ellos cumplen las normas de seguridad USDA H - 1 y son autorizados para usarse en la industria avícola y carnica.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      Los lubricantes de TRIBOQUIMIA S.A. de C.V. cumplen con las normas:<br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      21.CFR 172 - 878  Aceite mineral blanco USP en contacto directo con alimentos.<br>
+      21. CFR 172 - 882 Hidrocarburos sintéticos, PAO´S.<br>
+      21. CFR 182 Substancias generalmente reconocidas como seguras, oxido de zinc y tocoferol (vitamina E).<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>CRISTALINO ADHE SINTÉTICO</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      ACEITES TRANSPARENTES NO TÓXICOS PEGAJOSOS Y ADHESIVOS MULTIFUNCIONALES AUTORIZADOS POR LA NSF  CON LA CLASE  H - 1  (PAO)<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
-      <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>BLANCO CADENAS</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      ACEITE LUBRICANTE EN AEROSOL ESPECIALMENTE DISEÑADO PARA LA INDUSTRIA ALIMENTARIA<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      <strong>GLASTEER  NF, GLASTEER  USP</strong><br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      ACEITES BLANCOS MINERALES PUROS. (PARA CONTACTO DIRECTO CON ALIMENTOS)<br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      <strong>ANTARES  HT -  25  GA</strong><br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      LUBRICANTE 100% SINTETICO PARA TRABAJAR EN ALTAS TEMPERATURAS QUE CUMPLE CON LA NORMA FDA 21  CFR 178.3570 Y APROBADO POR LA NSF COMO H-1<br>
+      <br>
       </p>
 
       </div>
