--- a/webactual/fluidostermicos.html
+++ b/webactual/fluidostermicos.html
@@ -54,42 +54,45 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</strong></h2>
+<h2 align="left"><strong>FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-      La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.<br>
+      Los fluidos de transferencia de calor fueron desarrollados por TRIBOQUIMIA, para usarse en altas temperaturas donde el empleo de vapor y agua caliente no son prácticos. Estos fluidos transfieren energía calorífica entre 260°c y 370°c donde las alternativas de fuego directo, conducción eléctrica y agua caliente/vapor son consideradas inseguras, costosas e incompatibles con el proceso. De la misma forma diferentes bases minerales y sintéticas son empleadas para la fabricación de estos fluidos con el objeto de cubrir una amplia gama de aplicaciones.<br>
       <br>
-      <strong>SPA METÁLICA 20 (SINTÉTICA)</strong><br>
+      <strong>THERMIK OILS</strong><br>
       <br>
-      COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC.<br>
+      ACEITES DE TRANSFERENCIA DE CALOR TIPO MINERAL BASES PARAFINICAS SELECCIONADAS GRUPO II<br>
       <br>
-      <strong>PASTA DE COBRE-201</strong><br>
+      <strong>TRIBOTHERM SS - 150</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C.<br>
+      FLUIDO SEMI-SINTETICO DE TRANSFERENCIA DE CALOR.<br>
       <br>
-      <strong>PASTA DE COBRE 202 NS</strong><br>
+      <strong>TRIBOTHERM LV</strong><br>
       <br>
-      EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C (PASTA ELECTRO CONDUCTIVA).
+      FLUIDO SINTETICO DE TRANSFERENCIA DE CALOR, NO CARBONIZA Y TIENE RESISTENCIA AL KRAKING TÉRMICO. (ALKIL AROMÁTICOS)<br>
+      <br>
       </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
-      <strong>TRIBOPASTE   NI - 300</strong><br>
+      <strong>SILAX P Y SILAX M</strong><br>
       <br>
-      PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.<br>
+      LOS ACEITES SINTETICOS A BASE DE “METIL FENIL POLISILOXANOS” (SILAX P – 500). PARA APLICACIONES EN ALTA TEMPERATURA Y SISTEMAS ABIERTOS.<br>
       <br>
-      <strong>SPA METÁLLICAL-CE (MODIFICADA)</strong><br>
+      “METIL POLISILOXANOS” (SILAX M - 500) PARA APLICACIÓN EN DIFUSIÓN DE METALES. MAS ECONÓMICO QUE EL SILAX P<br>
       <br>
-      PASTA LUBRICANTE DE MÚLTIPLES APLICACIONES A BASE DE UNA MEZCLA DE POLVOS METÁLICOS, CON UN RANGO DE TEMPERATURA DE APLICACIÓN DE -20 @ 1200ºC.<br>
+      <strong>HEAT SINTH - 32</strong><br>
       <br>
-      <strong>PASTA DE SILICON PIT</strong><br>
+      FLUIDO SINTÉTICO PARA TRANSFERENCIA DE CALOR DE ALTA EFICIENCIA Y AMPLIA VIDA A BASE DE PAO´S PARA TEMPERATURAS EN EL TANQUE DE EXPANSIÓN. HASTA 460°C<br>
       <br>
-      LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS Y LEJÍAS.
-
+      <strong>THERMOFLUID FG</strong><br>
+      <br>
+      FLUIDO PARA TRANSFERENCIA DE CALOR CON STATUS FDA/USP/NF (PARA CONTACTO INCIDENTAL CON ALIMENTOS)<br>
+      <br>
       </p>
 
       </div>
