--- a/webactual/gracias.html
+++ b/webactual/gracias.html
@@ -1,16 +1,231 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/button.css">
-    <title></title>
-  </head>
-  <body>
-    <h1 >gracias por mandar tu consulta </h1>
-    <form class="" action="contacto y ubicacion.html" method="post">
+<html lang="en">
+<link rel="icon" href="img/favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Las 3 metaetiquetas anteriores * deben * ser lo primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
+  <title>TRIBOQUIMIA</title>
+
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link href="css/animate.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" />
+
+</head>
+
+<body>
+  <header id="header">
+    <nav class="navbar navbar-default navbar-static-top" role="banner">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+          <div class="navbar-brand">
+            <a href="index.html"><h1>LUBRICANTES Y ESPECIALIDADES</h1></a>
+          </div>
+        </div>
+        <div class="navbar-collapse collapse">
+          <div class="menu">
+            <ul class="nav nav-tabs" role="tablist">
+<li role="presentation"><a href="index.html" class="active">HOME</a></li>
+<li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
+<li role="presentation"><a href="productos.html">PRODUCTOS</a></li>
+<li role="presentation"><a href="contacto y ubicacion.html">CONTACTO Y UBICACION</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!--/.container-->
+    </nav>
+    <!--/nav-->
+  </header>
+  <!--/header-->
+
+  
+
+  <section class="contact-page">
+    <div class="container">
+      <div class="text-center">
+        <hr class="bottom-line">
+        <img src="img/Slide_contactenos.jpg"><br>
+
+        <h2>!GRACIAS POR CONTACTARNOS¡</h2>
+
+        
+      </div>
+      
+      <!--/.row-->
+    </div>
+    <!--/.container-->
+  </section>
+  <!--/#contact-page-->
 
 
-    <button id="mio"type="submit"  vlaue ="index.html"name="button"> regresar </button>
-</form>
-  </body>
+  <footer>
+    <div class="container">
+      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+        <h4>Acerca de Nosotros</h4>
+
+        <div class="contact-info">
+          <ul>
+          <li><i class="fa fa-home fa"></i>&nbsp;Calle Miguel Hidalgo No.104 Col. Benito Juarez C.P.54940 Tultitlan Estado de México.</li><br>
+          <li><i class="fa fa-phone fa"></i>&nbsp;&nbsp;01 55 5884 9102</li>
+            <li><i class="fa fa-envelope fa"></i>&nbsp;triboquimia@gmail.com</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+        <div class="text-center">
+          <h4>Galeria de Fotos</h4>
+          <ul class="sidebar-gallery">
+        <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><img id="imgm"src="./img/imgmedia/imagen11.png" alt=""></button> </li>
+
+              <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal11"><img id="imgm"src="./img/imgmedia/imagen12.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2"><img id="imgm"src="./img/imgmedia/imagen13.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal3"><img id="imgm"src="./img/imgmedia/imagen14.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal14"><img id="imgm"src="./img/imgmedia/imagen15.png" alt=""></button> </li>
+                <li><button  id="imgb""button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal15"><img id="imgm"src="./img/imgmedia/imagen16.png" alt=""></button> </li>
+
+
+        </ul>
+        </div>
+      </div>
+      <div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+         <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!Nuestro Mundo Contiene Todo¡</h4>
+        <iframe width="400" height="275" ;position: absolute;right: 200px;" src="https://www.youtube.com/embed/_7FvdNJTqoc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen"></iframe>
+        </div>
+      </div>
+
+  </footer>
+
+  <div class="sub-footer">
+    <div class="container">
+      <div class="social-icon">
+        <div class="col-md-4">
+          <ul class="social-network">
+            <li><a href="https://www.facebook.com/triboquimia.lubricantes.1" target="_blank" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/Triboquimia1" target="_blank" class="twitter tool-tip" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://plus.google.com/114753530410249625770" target="_blank" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCrU9je7TZ93Sp7HbHpKdjNA?view_as=subscriber" target="_blank" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-md-offset-4">
+        <div class="copyright">
+          &copy; TRIBOQUIMIA. All Rights Reserved.
+          <div class="credits">
+
+            <a href="http://www.servitecflhuaraz.com/">DevelopmentWeb</a> by <a href="http://www.servitecflhuaraz.com//">ING.CJSG</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen11.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal11" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen12.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen13.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+
+  <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen14.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal15" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" style="width:50%;">
+
+        <img src="./img/imgmedia/imagen16.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+  <div class="modal fade" id="exampleModal14" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content"style="width:50%;">
+
+        <img src="./img/imgmedia/imagen15.png" alt="">
+
+    </div>
+  </div>
+
+  </div>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+  <script src="js/wow.min.js"></script>
+  <script>
+    wow = new WOW({}).init();
+  </script>
+  <script>
+    (function($) {
+      //Google Map
+      var get_latitude = $('#google-map').data('latitude');
+      var get_longitude = $('#google-map').data('longitude');
+
+      function initialize_google_map() {
+        var myLatlng = new google.maps.LatLng(get_latitude, get_longitude);
+        var mapOptions = {
+          zoom: 14,
+          scrollwheel: false,
+          center: myLatlng
+        };
+        var map = new google.maps.Map(document.getElementById('google-map'), mapOptions);
+        var marker = new google.maps.Marker({
+          position: myLatlng,
+          map: map
+        });
+      }
+      google.maps.event.addDomListener(window, 'load', initialize_google_map);
+    })(jQuery);
+  </script>
+  <script src="contactform/contactform.js"></script>
+
+</body>
+
 </html>
